--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -1,14 +1,15 @@
-$font-base-color:             $grey-2;
+$font-base-color:             "black";
 $font-family-base:            'Graphik', Arial, sans-serif;
 $font-family-blog:            'Tiempos Headline', Arial, sans-serif;
 $line-height-base:            1.5;
 $fs-base:                     1.6rem;
 $fs-base-responsive:          1.4rem;
+$fs-extra-large:              4rem;
 $fs-large:                    3rem;
 $fs-large-responsive:         2rem;
 $fs-small:                    $fs-base-responsive;
 $fs-small-responsive:         1rem;
-$fs-h1:                       $fs-large;
+$fs-h1:                       $fs-extra-large;
 $fs-h2:                       $fs-large;
 $fs-h3:                       2rem;
 $fs-h4:                       $fs-base;
@@ -64,7 +65,7 @@ li{
   margin-bottom: 2em;
 
   @media (min-width: $screen-sm){
-    margin-bottom: 0;
+    margin-bottom: 2em;
   }
 }
 
@@ -82,7 +83,7 @@ blockquote {
 h1,.h1{
   font-size: $fs-large-responsive;
   margin-top: 0;
-  font-weight: 500;
+  font-weight: 600;
   margin-bottom: 1rem;
   @media (min-width: $screen-sm){
     font-size: $fs-h1;
