--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 @import './animations.css';
 @import './blog.css';
 
@@ -75,425 +76,390 @@ body.index-page {
   margin-top: 2rem;
 }
 
-/* Site Links */
-.site-link:hover {
-  background-color: black;
-  color: white;
-}
+.page-index {
+  /* Site Links */
+  .site-link:hover {
+    background-color: black;
+    color: white;
+  }
 
-/* content spacing */
-.content-block,
-blockquote,
-ol,
-p,
-ul {
-  margin-top: 0;
-  margin-bottom: 2.4rem;
-}
+  /* typography */
+  @media (min-width: 768px) {
+    body {
+      font-size: 1.6rem;
+    }
 
-.content-block + .content-block,
-.content-block + blockquote,
-.content-block + ol,
-.content-block + p,
-.content-block + ul,
-blockquote + .content-block,
-blockquote + blockquote,
-blockquote + ol,
-blockquote + p,
-blockquote + ul,
-ol + .content-block,
-ol + blockquote,
-ol + ol,
-ol + p,
-ol + ul,
-p + .content-block,
-p + blockquote,
-p + ol,
-p + p,
-p + ul,
-ul + .content-block,
-ul + blockquote,
-ul + ol,
-ul + p,
-ul + ul {
-  margin-top: 1em;
-}
-
-/* typography */
-@media (min-width: 768px) {
-  body {
-    font-size: 1.6rem;
+    .title {
+      margin: 7rem 0 5rem;
+    }
   }
 
   .title {
-    margin: 7rem 0 5rem;
+    margin: 7.2rem 0 4.8rem;
+    text-align: center;
+    font-weight: 600;
   }
-}
 
-.title {
-  margin: 7.2rem 0 4.8rem;
-  text-align: center;
-  font-weight: 600;
-}
+  ul {
+    padding-left: 1.1em;
+  }
 
-ul {
-  padding-left: 1.1em;
-}
+  #pinned-posts ul {
+    padding: 0;
+  }
 
-#pinned-posts ul {
-  padding: 0;
-}
-
-.bio li {
-  margin-bottom: 2em;
-}
-
-@media (min-width: 768px) {
   .bio li {
     margin-bottom: 2em;
   }
-}
 
-blockquote {
-  border-left: 4px solid #6c5cff;
-  padding-left: 1em;
-  font-weight: 700;
-  margin-left: 0;
-  margin-right: 0;
-  max-width: 600px;
-}
+  @media (min-width: 768px) {
+    .bio li {
+      margin-bottom: 2em;
+    }
+  }
 
-.h1,
-blockquote,
-h1 {
-  font-size: 2rem;
-  margin-top: 0;
-}
+  blockquote {
+    border-left: 4px solid #6c5cff;
+    padding-left: 1em;
+    font-weight: 700;
+    margin-left: 0;
+    margin-right: 0;
+    max-width: 600px;
+  }
 
-.h1,
-h1 {
-  font-weight: 600;
-  margin-bottom: 1rem;
-}
+  .h1,
+  blockquote,
+  h1 {
+    font-size: 2rem;
+    margin-top: 0;
+  }
 
-@media (min-width: 768px) {
   .h1,
   h1 {
-    font-size: 4rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
   }
-}
 
-.h2,
-h2 {
-  font-size: 3rem;
-  color: #030303;
-  font-weight: 600;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  display: inline-block;
-}
+  @media (min-width: 768px) {
+    .h1,
+    h1 {
+      font-size: 4rem;
+    }
+  }
 
-@media (min-width: 768px) {
   .h2,
   h2 {
-    padding-bottom: 48px;
+    font-size: 3rem;
+    color: #030303;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    display: inline-block;
   }
-}
 
-.h3,
-h3 {
-  font-size: 2rem;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  font-weight: regular;
-}
+  @media (min-width: 768px) {
+    .h2,
+    h2 {
+      padding-bottom: 48px;
+    }
+  }
 
-.h4,
-.h5,
-h4,
-h5 {
-  font-size: 1.6rem;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  font-weight: regular;
-}
+  .h3,
+  h3 {
+    font-size: 2rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font-weight: regular;
+  }
 
-.s1 {
-  font-size: 4rem;
-}
+  .h4,
+  .h5,
+  h4,
+  h5 {
+    font-size: 1.6rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+    font-weight: regular;
+  }
 
-.s2 {
-  font-size: 3rem;
-}
+  .s1 {
+    font-size: 4rem;
+  }
 
-.s3 {
-  font-size: 2rem;
-}
+  .s2 {
+    font-size: 3rem;
+  }
 
-.s4,
-.s5 {
-  font-size: 1.6rem;
-}
+  .s3 {
+    font-size: 2rem;
+  }
 
-.s5 {
-  font-size: 1.4rem;
-}
+  .s4,
+  .s5 {
+    font-size: 1.6rem;
+  }
 
-.large {
-  font-size: 3rem;
-}
+  .s5 {
+    font-size: 1.4rem;
+  }
 
-.small {
-  font-size: 1.4rem;
-}
+  .large {
+    font-size: 3rem;
+  }
 
-hgroup .s1,
-hgroup h1 {
-  margin-bottom: 0.2em;
-}
+  .small {
+    font-size: 1.4rem;
+  }
 
-hgroup .s1 + *,
-hgroup h1 + * {
-  font-weight: 400;
-}
+  hgroup .s1,
+  hgroup h1 {
+    margin-bottom: 0.2em;
+  }
 
-/* Links */
-a {
-  text-decoration: none;
-  color: #6c5cff;
-  -webkit-transition-property: all;
-  transition-property: all;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-}
+  hgroup .s1 + *,
+  hgroup h1 + * {
+    font-weight: 400;
+  }
 
-a .nuxt-link-active,
-a.active,
-a:focus,
-a:hover {
-  outline: 0;
-  text-decoration: none;
-}
+  /* Links */
+  a {
+    text-decoration: none;
+    color: #6c5cff;
+    -webkit-transition-property: all;
+    transition-property: all;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+  }
 
-a.ani {
-  text-decoration: none;
-}
+  a .nuxt-link-active,
+  a.active,
+  a:focus,
+  a:hover {
+    outline: 0;
+    text-decoration: none;
+  }
 
-a.ani.active,
-a.ani:focus,
-a.ani:hover {
-  color: #c8c2ff;
-}
+  a.ani {
+    text-decoration: none;
+  }
 
-a.ani span {
-  display: inline-block;
-  position: relative;
-}
+  a.ani.active,
+  a.ani:focus,
+  a.ani:hover {
+    color: #c8c2ff;
+  }
 
-a.ani span:after {
-  content: '';
-  display: block;
-  position: absolute;
-  height: 1.5px;
-  bottom: 0.4px;
-  width: 0;
-  background-color: #c8c2ff;
-  -webkit-transition-property: width;
-  transition-property: width;
-  -webkit-transition-duration: 0.4s;
-  transition-duration: 0.4s;
-}
+  a.ani span {
+    display: inline-block;
+    position: relative;
+  }
 
-a.dribbble {
-  color: #ea4c89;
-}
+  a.ani span:after {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 1.5px;
+    bottom: 0.4px;
+    width: 0;
+    background-color: #c8c2ff;
+    -webkit-transition-property: width;
+    transition-property: width;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+  }
 
-a.dribbble.active,
-a.dribbble:focus,
-a.dribbble:hover {
-  color: #ef7aa7;
-}
+  a.dribbble {
+    color: #ea4c89;
+  }
 
-a.dribbble span:after {
-  background-color: #ef7aa7;
-}
+  a.dribbble.active,
+  a.dribbble:focus,
+  a.dribbble:hover {
+    color: #ef7aa7;
+  }
 
-a.linkedin {
-  color: #0077b5;
-}
+  a.dribbble span:after {
+    background-color: #ef7aa7;
+  }
 
-a.linkedin.active,
-a.linkedin:focus,
-a.linkedin:hover {
-  color: #0099e8;
-}
+  a.linkedin {
+    color: #0077b5;
+  }
 
-a.linkedin span:after {
-  background-color: #0099e8;
-}
+  a.linkedin.active,
+  a.linkedin:focus,
+  a.linkedin:hover {
+    color: #0099e8;
+  }
 
-a.ani:hover span:after {
-  width: 100%;
-}
+  a.linkedin span:after {
+    background-color: #0099e8;
+  }
 
-/* text-negative */
-.text-negative {
-  color: #fff;
-}
+  a.ani:hover span:after {
+    width: 100%;
+  }
 
-/* wrapper */
-.wrapper {
-  position: relative;
-  padding-left: 0;
-  top: 5rem;
-  height: calc(100% - 5rem);
-  -webkit-overflow-scrolling: touch;
-  overflow-y: auto;
-}
+  /* text-negative */
+  .text-negative {
+    color: #fff;
+  }
 
-@media (min-width: 992px) {
+  /* wrapper */
   .wrapper {
+    position: relative;
+    padding-left: 0;
+    top: 5rem;
+    height: calc(100% - 5rem);
+    -webkit-overflow-scrolling: touch;
+    overflow-y: auto;
+  }
+
+  @media (min-width: 992px) {
+    .wrapper {
+      height: auto;
+      top: auto;
+    }
+  }
+
+  /* Selection */
+  ::-moz-selection {
+    background: #6c5cff;
+    color: #fff;
+  }
+
+  ::selection {
+    background: #6c5cff;
+    color: #fff;
+  }
+
+  /* font-awesome */
+  .fa {
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .fa.active,
+  .fa:focus,
+  .fa:hover {
+    outline: 0;
+    text-decoration: none;
+  }
+
+  /* image */
+  img {
+    max-width: 100%;
     height: auto;
-    top: auto;
   }
-}
 
-/* Selection */
-::-moz-selection {
-  background: #6c5cff;
-  color: #fff;
-}
+  /* shape */
+  .shape {
+    width: 100%;
+    max-height: 100%;
+  }
 
-::selection {
-  background: #6c5cff;
-  color: #fff;
-}
+  /* disabled */
+  .disabled {
+    cursor: not-allowed;
+  }
 
-/* font-awesome */
-.fa {
-  text-decoration: none;
-  display: inline-block;
-}
+  /* list */
+  li,
+  ul {
+    list-style-type: none;
+  }
 
-.fa.active,
-.fa:focus,
-.fa:hover {
-  outline: 0;
-  text-decoration: none;
-}
-
-/* image */
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-/* shape */
-.shape {
-  width: 100%;
-  max-height: 100%;
-}
-
-/* disabled */
-.disabled {
-  cursor: not-allowed;
-}
-
-/* list */
-li,
-ul {
-  list-style-type: none;
-}
-
-/* section */
-section {
-  margin-bottom: 2.4rem;
-}
-
-section ul {
-  padding: 0;
-}
-
-@media (min-width: 768px) {
+  /* section */
   section {
-    margin-bottom: 7.2rem;
+    margin-bottom: 2.4rem;
   }
-}
 
-/* button */
-button {
-  display: inline-block;
-  padding: 1rem 2rem;
-  margin: 0;
-  height: 3.6rem;
-  background-color: #6c5cff;
-  text-decoration: none;
-  color: #fff;
-  cursor: pointer;
-  border: 0;
-  text-align: center;
-  -webkit-transition: background 0.25s ease-in-out, -webkit-transform 0.15s ease;
-  transition: background 0.25s ease-in-out, -webkit-transform 0.15s ease;
-  transition: background 0.25s ease-in-out, transform 0.15s ease;
-  transition: background 0.25s ease-in-out, transform 0.15s ease,
-    -webkit-transform 0.15s ease;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
+  section ul {
+    padding: 0;
+  }
 
-button:hover {
-  background-color: #574bc1;
-}
+  @media (min-width: 768px) {
+    section {
+      margin-bottom: 7.2rem;
+    }
+  }
 
-button:focus {
-  outline: 0;
-}
+  /* button */
+  button {
+    display: inline-block;
+    padding: 1rem 2rem;
+    margin: 0;
+    height: 3.6rem;
+    background-color: #6c5cff;
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+    border: 0;
+    text-align: center;
+    -webkit-transition: background 0.25s ease-in-out,
+      -webkit-transform 0.15s ease;
+    transition: background 0.25s ease-in-out, -webkit-transform 0.15s ease;
+    transition: background 0.25s ease-in-out, transform 0.15s ease;
+    transition: background 0.25s ease-in-out, transform 0.15s ease,
+      -webkit-transform 0.15s ease;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+  }
 
-button:active {
-  -webkit-transform: scale(0.99);
-  transform: scale(0.99);
-}
+  button:hover {
+    background-color: #574bc1;
+  }
 
-/* text input */
-.text-input {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  flex-direction: column;
-}
+  button:focus {
+    outline: 0;
+  }
 
-.text-input__label {
-  margin-bottom: 4px;
-}
+  button:active {
+    -webkit-transform: scale(0.99);
+    transform: scale(0.99);
+  }
 
-.text-input__field {
-  -webkit-transition: border 0.1s ease;
-  transition: border 0.1s ease;
-  border: 1px solid #b5b5b5;
-  background-color: #fff;
-  padding: 0 8px;
-  height: 36px;
-  font-size: 16px;
-}
+  /* text input */
+  .text-input {
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    flex-direction: column;
+  }
 
-.text-input__field:active,
-.text-input__field:hover {
-  outline: 0;
-  border: 1px solid #6c5cff;
-}
+  .text-input__label {
+    margin-bottom: 4px;
+  }
 
-.text-input__field:focus {
-  outline-offset: 0;
-  border: 1px solid #6c5cff;
-}
+  .text-input__field {
+    -webkit-transition: border 0.1s ease;
+    transition: border 0.1s ease;
+    border: 1px solid #b5b5b5;
+    background-color: #fff;
+    padding: 0 8px;
+    height: 36px;
+    font-size: 16px;
+  }
 
-.text-input__field:disabled {
-  background-color: grey;
-  pointer-events: none;
-}
+  .text-input__field:active,
+  .text-input__field:hover {
+    outline: 0;
+    border: 1px solid #6c5cff;
+  }
 
-/* misc */
-.pt-0-important {
-  @apply pt-0 !important;
+  .text-input__field:focus {
+    outline-offset: 0;
+    border: 1px solid #6c5cff;
+  }
+
+  .text-input__field:disabled {
+    background-color: grey;
+    pointer-events: none;
+  }
+
+  /* misc */
+  .pt-0-important {
+    @apply pt-0 !important;
+  }
 }
