Added new layout, which still doesn't solve the main problem of sharing styles The biggest problem is the background gradient So, I'm updating the blog components to be more visible on top of it sigh Fixed layout issues which revolved around the use of the `--` separator in pug

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,5 +1,9 @@
 /* Blog Headings */
 
+.blog-content {
+  @apply px-4;
+}
+
 .blog-content h1 {
   @apply mt-16;
 }
@@ -36,6 +40,7 @@
 .blog-content ol,
 .blog-content ul {
   @apply text-lg leading-h5;
+
 }
 
 /* Blog Breadcrumbs */
