Updated Tailwind usage of colons to double-dash This was implemented for pug compatability but not updated in non-pug templates. Work on layouts and clarity against purple background. Much inconsistency still, sorry.

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -2,6 +2,11 @@
 
 .blog-content {
   @apply px-4;
+  @apply last--pb-4;
+}
+
+.blog-content p:first-child {
+  @apply pt-4;
 }
 
 .blog-content h1 {
