Going with 75% for the time-being, blog looks "good enough." "excerpt" now seems to be a keyword, so usage replaced with "description."

--- a/assets/css/main.purple.css
+++ b/assets/css/main.purple.css
@@ -8,7 +8,7 @@
 
 /* html, body */
 html {
-  /* font-size: 75%; */
+  font-size: 75%;
   font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   height: 100%;
