--- a/assets/css/main.purple.css
+++ b/assets/css/main.purple.css
@@ -125,7 +125,7 @@ body {
   @media (min-width: 768px) {
     .h2,
     h2 {
-      padding-bottom: 48px;
+      /* padding-bottom: 48px; */
     }
   }
 
